--- a/Shop/public/frontend/assets/css/style.css
+++ b/Shop/public/frontend/assets/css/style.css
@@ -63,7 +63,7 @@
 * Global Settings       *
 *************************/
 body{
-    font-family: 'Cairo', sans-serif;
+    font-family: Helvetica;
     font-size: 15px;
     line-height: 24px;
     font-weight: 400;
@@ -83,7 +83,7 @@ label .required{
 }
 img{
     max-width: 100%;
-    height: auto;
+
     outline: none;
 }
 figure{
